[gd_scene load_steps=3 format=2]

[ext_resource path="res://factory/TemplateBuilding.gd" type="Script" id=1]
[ext_resource path="res://buildings/AutoTower.tscn" type="PackedScene" id=2]

[node name="TemplateBuilding" type="Spatial"]
script = ExtResource( 1 )

[node name="AutoTower" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, -1.41995e-29, -5.96046e-08, 0, 1, -2.25857e-22, 5.96046e-08, 2.25857e-22, 1, 0, 0, 0 )
len_x = 7
len_y = 11
len_z = 7
auto_build = false

[node name="BuildingFX" type="Spatial" parent="AutoTower"]

[node name="FootprintFX" type="Spatial" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.0546875, 0, -0.0546875, 0.109375, 0.21875, 0.109375 )

[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
